# juin24_cmlops_reco_film

./: .gitignore  Dockerfile  Dockerfile.api  README.md  api.py  app.py  csv_exporter.py  docker-compose.yml  prometheus.yml  pyproject.toml  test.py
.github/workflows/: python-app.yml  unnitest.yml
doc/api/: README.md
grafana/provisioning/dashboards/: dashboard.json
heimdall/config/keys/: cert.crt
heimdall/config/nginx/: worker_processes.conf
heimdall/config/www/: app.sqlite
mlruns/0/: meta.yaml
mlruns/0/157144bdf94e422d91584180e55c8d3f/: meta.yaml
mlruns/0/20001adbb1c147ab869469014c5168dc/: meta.yaml
mlruns/0/4273be3f070045488b34b12fa798812c/: meta.yaml
mlruns/0/57eb2104db9f406999fcfaafda72c80f/: meta.yaml
mlruns/0/8587e7c2ee0647808fac3e63b2225dfc/: meta.yaml
mlruns/0/8c278fc8b69d47c1935303a64ae52ebf/: meta.yaml
mlruns/0/936fd1353fd44b51aa9d0cfc9c20d3fb/: meta.yaml
mlruns/0/b1621407b5cc4c339316ff28808ddbd2/: meta.yaml
mlruns/0/dc6e506b8d994b9a9ab1a036aa39218e/: meta.yaml
mlruns/178039963948470527/: meta.yaml
mlruns/178039963948470527/0191bc09217f4ec48c3b2c86cebe2121/: meta.yaml
mlruns/178039963948470527/1581f1944a094fba98d9612653e56539/: meta.yaml
mlruns/178039963948470527/1c38034c7b794cab986dfe04e36cc3f1/: meta.yaml
mlruns/models/KNN_Recommendation_Model/: meta.yaml
predictions/: predictions_log.csv
src/api/: app.py
src/data/: import_raw_data.py  process_raw.py
src/models/: predict_model.py  train_model.py
src/utils/: logger.py
tests/: test_data.py  test_mlflow_connection.py  test_predict_model.py  test_prediction.py
(+169 files in other folders)
