[tool.poetry]
name = "reco film"
version = "0.1.0"
description = "MLOps"
authors = ["Team reco"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
awscli = "^1.33.43"
python-dotenv = "^1.0.1"
pandas = "^2.2.2"
scikit-learn = "^1.5.1"
click = "^8.1.7"
fire = "^0.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
